# s3-connector-for-pytorch

./: .editorconfig  .gitignore  CHANGELOG.md
.doctrees/: environment.pickle
.doctrees/autoapi/s3torchconnector/: index.doctree
_modules/s3torchconnector/dcp/: s3_file_system.html
_sources/autoapi/s3torchconnector/: index.rst.txt
autoapi/s3torchconnector/: index.html
autoapi/s3torchconnector/dcp/: index.html
autoapi/s3torchconnector/s3checkpoint/: index.html
s3torchbenchmarking/: README.md  benchmark_dataload_results.html  benchmark_dataload_results.json  pyproject.toml
s3torchbenchmarking/conf/: dataset.yaml  sharding.yaml
s3torchbenchmarking/conf/checkpoint/: none.yaml
s3torchbenchmarking/conf/dataloader/: fsspec.yaml  mountpoint.yaml  s3iterabledataset.yaml  s3mapdataset.yaml
s3torchbenchmarking/conf/training/: entitlement.yaml
s3torchbenchmarking/src/s3torchbenchmarking/: benchmark.py  benchmark_utils.py  constants.py  hydra_callback.py  job_results.py  models.py
s3torchbenchmarking/src/s3torchbenchmarking/dataset/: benchmark.py
s3torchbenchmarking/src/s3torchbenchmarking/dcp/: README.md  benchmark.py
s3torchbenchmarking/src/s3torchbenchmarking/lightning_checkpointing/: benchmark.py
s3torchbenchmarking/utils/: collect_and_write_to_dynamodb.py  generate_datasets_files.py  prepare_and_run_benchmark.py  prepare_ec2_instance.sh  prepare_nvme.sh  run_dataloading_benchmarks.py  run_dataset_benchmarks.sh  run_dcp_benchmarks.sh  run_lightning_benchmarks.sh  upload_collated_results_to_s3.py
s3torchconnectorclient/: pyproject.toml
(+14 files in other folders)
